fixed scrollbars

--- a/src/styles.less
+++ b/src/styles.less
@@ -11,13 +11,7 @@ body {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 10px !important;
+  width: 0 !important;
 }
 
-/* Track */
-::-webkit-scrollbar-thumb {
-  background-color: lightgray !important;
-  &:hover {
-    background-color: gray !important;
-  }
-}
+
